chore: added tailwind with ember-cli-postcss

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,6 @@
 {{page-title "EmbroiderTailwindcssLiveReloadPurgecss"}}
 
-<h2 id="title">Welcome to Ember</h2>
+<h2 id="title" class="text-red-400 p-4 bg-blue-500 text-3xl">Welcome to Ember</h2>
+<div class="title">Welcome to Ember</div>
 
 {{outlet}}
